--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 	<modules>
 		<module>core-service</module>
 		<module>cart-service</module>
+		<module>api</module>
 	</modules>
 
 	<groupId>ru.vinogradov.spring</groupId>
