--- a/cart-service/src/main/resources/application.yaml
+++ b/cart-service/src/main/resources/application.yaml
@@ -2,3 +2,9 @@ server:
   port: 17004
   servlet:
     context-path: /vin-carts
+integrations:
+  product-service:
+    url: http://localhost:17003/vin/
+    connect-timeout: 5000
+    read-timeout: 10000
+    write-timeout: 5000
